# game-theory

./: .gitignore  README.md  pyproject.toml  sample.txt
Algorithm Horn Sidney/: algorytmHS.py
Dynamic programming/: algorithm.py  algorithm_functions.py  functions.py  input_functions.py
Network programming/: function.py  sample1.txt  sample3.txt  tree.py
Zero sum two player game/: game.py
Zero sum two player game/tests/: test_a_zero_sum_two_player_game.py
a_zero_sum_two_player_game/: functions.py  game.py
decision making theory/decision making theory/: functions.py  main.py
tests/: test_a_zero_sum_two_player_game.py
zadanie 5/: algorytmHS.py
zadanie3/: function.py  inputFunctions.py  sample2.txt  tree.py
zadanie4/: sample1.txt  sample2.txt  testrun.py
